# gausstwin

./: .gitignore  .gitmodules  README.md  env.sh  pixi.toml  pyproject.toml
checkpoints/: download_ckpts.sh
config/builder/: rigid_body_builder.yaml  robot_builder.yaml  rope_builder.yaml
config/tracking/: track_rigid.yaml  track_rope.yaml
dataset/: download_data.sh  download_demo.sh
docs/: build_object.md  build_robot_gaussians.md  setup.md
scripts/object_build/rigid/: build_rigid_body.py
scripts/object_build/rope/: build_rope.py
scripts/process_data/: save_cam_cfg.py
scripts/robot_build/: build_robot.py  check_robot_model.py  save_robot_img.py
scripts/tracking/: process_video.py
scripts/tracking/rigid/: save_multi_prompt.py  track_rigid.py
scripts/tracking/rope/: track_rope.py
src/gausstwin/camera/: cam.py
src/gausstwin/cfg/: domain.py
src/gausstwin/cfg/builder/: builder_cfg.py
src/gausstwin/cfg/robot/: __init__.py  fr3_cfg.py  fr3_v3_cfg.py  robot_configs.py
src/gausstwin/cfg/sim/: pbd_cfg.py
src/gausstwin/cfg/tracker/: gs_track_cfg.py
src/gausstwin/gaussians/: adam.py  appearance_optimizer.py  gaussians.py  visual_forces.py
src/gausstwin/scene_builders/: rigid_body_builder.py  robot_builder.py  rope_builder.py
src/gausstwin/segmentation/: prompt.py  tracker_TAM.py
src/gausstwin/utils/: cam_utils.py  dataset.py  franka_utils.py  gs_utils.py  init_utils.py  load_utils.py  math_utils.py  model_builder_utils.py  path_utils.py  ps_utils.py  robot_utils.py  rope_utils.py  vis_utils.py  warp_utils.py
(+21 files in other folders)
