[project]
authors = [{name = "cai", email = "yichen.cai@tu-darmstadt.de"}]
name = "gausstwin"
requires-python = ">=3.10,<3.11"
version = "0.1.0"
dependencies = [
    "black",
    "torch>=2.6.0,<2.7.0",
    "torchvision",
    "torchaudio",
    "warp-lang",
    "tqdm",
    "trimesh",
    "opencv-python",
    "pydantic",
    "scikit-learn",
    "pandas", 
    "huggingface_hub"
    "gsplat>=1.5.3,<2", 
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/gausstwin"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gausstwin = { path = ".", editable = true }
